<resources>
    <string name="app_name">Cookinian</string>
    <string name="dialog_positive_button">Oke</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="retry">Coba lagi</string>
    <string name="greeting">Halo, %1$s!</string>
    <string name="object_detection_failed">Deteksi gagal!</string>
    <string name="object_detection_success">Deteksi berhasil!</string>
    <string name="camera_info_message">Untuk saat ini, hanya mampu mendeteksi sebanyak 13 kelas bahan makanan. \n\nHasil deteksi mungkin tidak sesuai dan membutuhkan konfirmasi lebih lanjut.</string>
    <string name="error_empty_input">Semua data harus diisi</string>
    <string name="register_success">Akun berhasil dibuat</string>
    <string name="error_title">Terjadi Kesalahan</string>
    <string name="error_no_internet">Tidak ada koneksi internet, silahkan coba lagi.</string>
    <string name="saved_recipe_empty">Tidak ada resep yang tersimpan</string>
    <string name="delete">Hapus</string>
    <string name="saved_recipe_delete_all">Apakah Anda yakin ingin menghapus semua resep yang disimpan?</string>
    <string name="dialog_negative_button">Batal</string>
    <string name="camera_permission_denied">Izin kamera ditolak</string>
    <string name="ingredients_detection">Deteksi Bahan Makanan</string>
    <string name="scan_ingredients">Scan Bahan Makanan</string>
    <string name="detection_result">Hasil Deteksi</string>
    <string name="error_no_email">Tidak ada aplikasi email yang terpasang</string>
    <string name="select_theme">Pilih Tema</string>
    <string name="logout">Keluar</string>
    <string name="logout_success">Berhasil keluar</string>
    <string name="logout_confirmation">Apakah Anda yakin ingin keluar?</string>
    <string name="cookinian_email">mailto:cookinian.app@gmail.com</string>
    <string name="profile_edit">Edit Profil</string>
    <string name="edit_profile_success">Nama profil Anda berhasil diubah!</string>
    <string name="home">Beranda</string>
    <string name="crop_cancelled">Proses dibatalkan</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="change_password_success">Kata sandi Anda telah diubah!</string>
    <string name="old_password_diff">Kata sandi baru tidak sama!</string>
    <string name="save_recipe_success">Resep berhasil disimpan</string>
    <string name="save_recipe_delete">Resep dihapus dari penyimpanan</string>
    <string name="article">Artikel</string>
    <string name="camera">Kamera</string>
    <string name="saved_recipe">Resep Tersimpan</string>
    <string name="profile">Profil</string>
    <string name="share">Bagikan</string>
    <string name="save_recipe">Simpan resep</string>
    <string name="recipe_detail">Detail Resep</string>
    <string name="article_detail">Detail Artikel</string>
    <string name="recipe_recommendation">Rekomendasi Resep</string>
    <string name="login_message">Masuk untuk melanjutkan penemuan resep yang sesuai dengan bahan-bahan Anda. Petualangan kuliner Anda menanti!</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="name">Nama</string>
    <string name="save">Simpan</string>
    <string name="old_password">Kata sandi lama</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="confirmation_password">Konfirmasi kata sandi</string>
    <string name="cooking_time">Waktu memasak</string>
    <string name="cooking_level">Level memasak</string>
    <string name="food_serving">Porsi</string>
    <string name="food_calories">Kalori</string>
    <string name="ingredients">Bahan</string>
    <string name="steps">Langkah</string>
    <string name="visibility">Visibilitas</string>
    <string name="search_hint">Cari resep…</string>
    <string name="register_message">Bergabunglah dengan Cookinian dan dapatkan resep pribadi berdasarkan bahan-bahan yang Anda miliki. Daftar sekarang untuk memulai perjalanan kuliner Anda!</string>
    <string name="welcome_banner">Welcome banner</string>
    <string name="welcome_message">Temukan resep lezat yang disesuaikan dengan bahan-bahan Anda. Pindai bahan makanan Anda dan biarkan koki AI kami merekomendasikan hidangan yang sempurna. Siap mengubah dapur Anda menjadi petualangan kuliner?</string>
    <string name="take_picture">Ambil gambar</string>
    <string name="detection_info">Info deteksi</string>
    <string name="gallery">Galeri</string>
    <string name="home_message">Mau masak apa hari ini?</string>
    <string name="recipe">Resep</string>
    <string name="see_all">Lihat Semua</string>
    <string name="category">Kategori</string>
    <string name="profile_change_password">Ubah kata sandi</string>
    <string name="menu_profile_edit">Edit profil</string>
    <string name="menu_profile_change_password">Ubah kata sandi</string>
    <string name="menu_profile_contact">Hubungi kami</string>
    <string name="menu_profile_theme">Mode tema</string>
    <string name="delete_all">Hapus semua</string>
    <string name="empty">Kosong</string>
    <string name="search_hint_ingredients">Bahan makanan…</string>
    <string name="recipe_recommendation_title">Rekomendasi Resep</string>
    <string name="recipe_recommendation_ingredients">Berdasarkan bahan yang Anda punya: %1$s.</string>
    <string name="empty_ingredients">Bahan bahan makanan Anda kosong</string>
    <string name="detection_ingredients">Bahan makanan</string>
    <string name="object_detection_info">Jika hasil deteksi tidak sesuai, bahan makanan bisa dimasukkan secara manual dengan mengetik dan memisahkan bahan makanan dengan tanda koma. \n\nContoh: Tomat, Cabai Merah…</string>
</resources>