<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/selector_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_article"
        android:icon="@drawable/selector_menu_food"
        android:title="@string/article" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/selector_menu_camera"
        android:title="@string/camera" />
    <item
        android:id="@+id/nav_saved_recipe"
        android:icon="@drawable/selector_menu_bookmarks"
        android:title="@string/saved_recipe" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/selector_menu_profile"
        android:title="@string/profile" />
</menu>