<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_welcome_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/welcome_banner"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/welcome_banner" />

    <TextView
        android:id="@+id/tv_welcome_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome_photo"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_welcome_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/welcome_message"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:text="@string/login"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_message"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_to_register"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/register"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_login"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>