<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustPan">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:id="@+id/tv_home_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_message"
                style="@style/FontBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="64dp"
                android:text="@string/home_message"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/iv_home_profile"
                app:layout_constraintStart_toStartOf="@+id/tv_home_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_username" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_home_profile"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_home_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textCursorDrawable="@null"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="@string/search_hint"
            app:showDividers="end"
            app:theme="@style/SearchViewCustom" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_home_banner"
                    android:layout_width="match_parent"
                    android:layout_height="190dp" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_home_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    app:dotsColor="@color/gray"
                    app:dotsCornerRadius="4dp"
                    app:dotsSize="6dp"
                    app:dotsSpacing="4dp"
                    app:selectedDotColor="@color/green" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_home_recipe"
                    style="@style/FontBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/recipe"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_home_see_all_recipe"
                    style="@style/FontMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/see_all"
                    android:textColor="@color/green"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_home_recipe"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_recipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_recipe" />

                <TextView
                    android:id="@+id/tv_home_empty_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="60dp"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_puzzled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pb_home_recipe"
                    style="@style/CircularProgressIndicatorCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_home_article"
                    style="@style/FontBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/category"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_article" />

                <TextView
                    android:id="@+id/tv_home_empty_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="60dp"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:drawableTopCompat="@drawable/ic_puzzled"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pb_home_article"
                    style="@style/CircularProgressIndicatorCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>